kuma-gw/templates/referenceGrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: fastapi-reference-grant
  namespace: fastapi
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: kuma-gw
  to:
    - group: ""
      kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: manager-reference-grant
  namespace: manager
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: kuma-gw
  to:
    - group: ""
      kind: Service
